layer z indices correctly for nodes and dropdown menu on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@
     background: rgb(255,255,255);
     color: rgb(8,56,78);
     height: 24px;
-    width: 63px;
+    width: 60px;
     font-size: 9px;
     margin-bottom: 4px;
 }
@@ -193,7 +193,7 @@ body .sliderMin, body .sliderMax {
     left: 10%;
     width: 80%;
     height: auto;
-    z-index: 1001;
+    z-index: 1010;
 }
 .mobileMenuButton {
     text-align: center;
@@ -319,7 +319,7 @@ body .sliderMin, body .sliderMax {
         left: 10%;
         right: 10%;
         top: calc(3vh + 80px);
-        z-index: 1001;
+        z-index: 1010;
         padding: 0;
     }
     body #exampleFiles a {
@@ -394,7 +394,7 @@ body .sliderMin, body .sliderMax {
     position: fixed;
     top: calc(3vh + 40px);
     left: calc(0.1em + 8em * 6);
-    z-index: 1004;;
+    z-index: 1010;
     background: white;
     padding: 2em;
     border-radius: 10px;
@@ -409,7 +409,7 @@ body .sliderMin, body .sliderMax {
     left: calc(38px + 8em * 5);
     top: calc(3vh + 40px);
     border: 1px solid black;
-    z-index: 1999;
+    z-index: 1010;
     display: none;
     background-color: #f8f9fa;
     padding: 20px;
@@ -472,7 +472,7 @@ body .sliderMin, body .sliderMax {
     font-size: 0.75em;
 }
 .deviceInport {
-    width: 4em;
+    width: 38px;
     font-size: 10px;
     margin-left: 9px;
     float: right;
@@ -542,7 +542,7 @@ mark {
     text-align: center;
     display: none;
     font-size: 1.5em;
-    z-index: 1004;
+    z-index: 1011;
 }
 #infoDiv a {
     color: rgb(8,56,78);
